added to Extent Report

--- a/Config/config.properties
+++ b/Config/config.properties
@@ -1,3 +1,3 @@
-browser=chrome
+browser=firefox
 url=http://demo.nopcommerce.com/
 reportConfigPath=D:\\eclipse workspace\\Photon-Workspace-Selenium\\nopCommerceFramework\\Config\\extent-config.xml
